update landing page about section

--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
                 <img src="headshot.jpeg" alt="Headshot of Dario Martinez III" class="headshot" />
                 <div class="about-text">
                     <p>
-                        Currently a senior studying finance, real estate, and motion pictures at the Herbert School of
-                        Business at the University of Miami. I am always evolving with the times and never afraid of a
-                        challenge that presents itself.
+                        I am a senior at the Herbert Business School at the University of Miami studying finance, real estate, and motion
+                        pictures. I enjoy tackling complex problems and adapting to an industry that is constantly evolving.
                     </p>
                     <p>
-                        I specialize in financial modeling, quantitative analysis, and portfolio management. I combine
-                        a technical mastery of valuation frameworks with a deep focus on global equity and private
-                        markets. Dedicated to high-stakes financial execution and data-driven market strategy.
+                        I have expertise in financial modeling, quantitative analysis, and portfolio management, combining valuation frameworks
+                        with a strong focus on global public and private markets. My work is defined by precision, analytical discipline, and a
+                        commitment to evidence based market strategy.
                     </p>
                     <a href="MartinezDarioResume.pdf" target="_blank" class="button button-about">View My Resume</a>
                 </div>
