--- a/education.html
+++ b/education.html
@@ -17,6 +17,7 @@
             <a href="experience.html">Experience</a>
             <a href="education.html" class="active">Education</a>
             <a href="projects.html">WBD and NFLX Mock Transaction</a>
+            <a href="data-infrastructure.html">Data Infrastructure Deck</a>
             <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
         </div>
     </nav>
