--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="experience.html">Experience</a>
             <a href="education.html">Education</a>
             <a href="projects.html">WBD and NFLX Mock Transaction</a>
+            <a href="data-infrastructure.html">Data Infrastructure Deck</a>
             <a class="nav-resume" href="MartinezDarioResume.pdf" target="_blank">View Resume</a>
         </div>
     </nav>
