add thumbnail to deck

--- a/data-infrastructure.html
+++ b/data-infrastructure.html
@@ -26,6 +26,8 @@
         <section id="transaction">
             <div class="project">
                 <p><strong>Data Infrastructure Deck</strong></p>
+                <img src="images/data_infrastructure_preview.png" alt="Data infrastructure deck preview"
+                    class="project-thumb" />
                 <p>
                     This project began with a question that emerged from working with SaaS and vertical software
                     companies: what sits between application software and the digital infrastructure powering it?
